<resources>
    <string name="app_name">FoodDietApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="Sign">Sign In</string>
    <string name="register">Register</string>
    <string name="daily_meal">Exercise</string>
    <string name="favourite">Favourites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meal">Meals</string>
    <string name="ezrafernandez04_gmail_com">ezrafernandez04@gmail.com</string>
    <string name="e_z_r_a">E Z R A</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="pssword">Password</string>
    <string name="Click_to_login">Log in</string>
    <string name="Click_to_Register">Register</string>
    <string name="_email">Email</string>
    <string name="passwrd">Password</string>
    <string name="Click_to_register">Register</string>
    <string name="login">Log in</string>
</resources>