<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/backgrounddd"
    tools:context=".activities.AuthenticationManager">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="409dp"
        android:layout_height="267dp"
        android:layout_marginTop="-130dp"
        android:src="@drawable/logo_health_sync" />

    <TextView
        android:id="@+id/Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/Click_to_Register"
        android:textAlignment="center"
        android:textColor="#1D2C77"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_marginLeft="20dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/_email"
            android:backgroundTint="@color/white"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:padding="18dp"
            android:drawableLeft="@drawable/baseline_email_24"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_marginLeft="20dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/passwrd"
            android:layout_marginTop="10sp"
            android:textColorHighlight="@color/black"
            android:background="@color/white"
            android:textColor="@color/black"
            android:padding="20sp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/baseline_lock_24"/>

    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_Register"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:background="@drawable/btn_design"
        android:text="@string/Click_to_register" />

    <TextView
        android:id="@+id/loginNow"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>