<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrounddd"
    tools:context=".LoginScreen">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="409dp"
        android:layout_height="267dp"
        android:layout_marginTop="-130dp"
        android:src="@drawable/logo_health_sync" />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#1D2C77"
        android:layout_marginBottom="20dp"
        android:text="Sign in"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_marginLeft="20dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_email_24"
            android:padding="20sp"
            android:backgroundTint="@color/white"
            android:background="@color/white"
            android:drawablePadding="5sp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textAlignment="viewStart"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10sp"
            android:backgroundTint="@color/white"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:hint="@string/pssword"
            android:padding="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_design"
        android:textColor="@color/white"
        android:text="@string/Click_to_login"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="199dp"
        android:layout_height="31dp"
        android:layout_marginLeft="-50dp"
        android:layout_marginBottom="-50dp"
        android:layout_marginTop="50dp"
        android:text="Don't have an account?"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.353"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.24" />

    <TextView
        android:layout_width="105dp"
        android:layout_height="36dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="-50dp"
        android:text="@string/Click_to_Register"
        android:textAlignment="center"
        android:textColor="#A4C0F1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.231" />


</LinearLayout>